--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header class="header">
 	<div class="top-bar container-fluid">
 		<div class="actions">
-			<a class="btn hidden-xs" href="mailto:someone@example.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a>
+			<a class="btn hidden-xs" href="mailto:jeff7y@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a>
 			<a class="btn" href="#"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume</a>
 		</div><!--//actions-->
 		<ul class="social list-inline">
@@ -54,9 +54,9 @@
 	<div class="contact-info">
 		<div class="container text-center">
 			<ul class="list-inline">
-				<li class="email"><i class="fa fa-envelope"></i><a href="mailto:someone@example.com">james.doe@website.com</a></li>
+				<li class="email"><i class="fa fa-envelope"></i><a href="mailto:jeff7y@gmail.com">jeff7y@gmail.com</a></li>
 				<li><i class="fa fa-phone"></i> <a href="tel: 0123456789">0451 78 6765</a></li>
-				<li class="website"><i class="fa fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
+				<li class="website"><i class="fa fa-globe"></i><a href="#" target="_blank">ruoyuyang.com</a></li>
 			</ul>
 		</div><!--//container-->
 	</div><!--//contact-info-->
@@ -430,7 +430,7 @@
 					<li><i class="fa fa-check" aria-hidden="true"></i> UI development</li>
 					<li><i class="fa fa-check" aria-hidden="true"></i> UX prototyping</li>
 				</ul>
-				<p>Drop me a line at <a href="mailto:someone@example.com">jeff7y@gmail.com</a> or call me at <a href="tel:01234567890">0123 456 7890</a></p>
+				<p>Drop me a line at <a href="mailto:jeff7y@gmail.com">jeff7y@gmail.com</a> or call me at <a href="tel:0451786765">0451786765</a></p>
 				<ul class="social list-inline">
 					<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
