Update edu info

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
 					</div><!--//education-body-->
 					<div class="time">2007 - 2010</div>
 					<div class="desc">
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient 
+						Data Minning
+						Multi-variable Analysis
 					</div>
 				</div><!--//item-inner-->
 			</div><!--//item-->
