--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="intro">
 		<div class="container text-center">
 			<img class="profile-image" src="assets/images/profile-image.png" alt="">
-			<h1 class="name">Richard Young</h1>
+			<h1 class="name">Ruoyu Yang</h1>
 			<div class="title">Web Developer</div>
 			<div class="profile">
 				<p>Web Dev</p>
